-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0 RC
-
None
-
MacOS Catalina 10.15.6
-
-
f3bf3155aae30d370be1903a15abaedcdd5ce62f (qt/qtmultimedia/dev) 6219c4a2e7ddc3d0809837b724055c22a264c29c (qt/qtmultimedia/6.2) 08fb26a9f7165174cf8ad907b283c20b9ebfcea8 (qt/qtmultimedia/6.2.0)
The following example randomly triggers this error: The program has unexpectedly finished.
Sometimes the application starts correctly and everything works as expected. Sometimes the window isn't displayed at all and the app crashes.
I couldn't reproduce this behavior using only one SoundEffect.
import QtQuick import QtMultimedia Window { width: 100 height: 100 visible: true SoundEffect { id: beep; source: "file:beep.wav"} SoundEffect { id: swosh; source: "file:swosh.wav" } Component.onCompleted: { beep.play() swosh.play() } }
The .wav are attached (they are probably not the cause since they work individually).
For Gerrit Dashboard: QTBUG-96642 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
372500,4 | Disconnect signals before releasing reference to objects | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
372611,2 | Disconnect signals before releasing reference to objects | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
372612,2 | Disconnect signals before releasing reference to objects | 6.2.0 | qt/qtmultimedia | Status: MERGED | +2 | 0 |