Disconnect signals before releasing reference to objects

Crash bug occurs when QWaveDecoder reads the whole file in one go
and emits formatKnown() signal followed by readyRead() signal.
The formatKnown() signal handler clears the m_waveDecoder pointer,
which the subsequence readyReady() handler tries to dereference.

This patch disconnects all signals before clearing m_waveDecoder
avoiding this problem.

Fixes: QTBUG-96642
Change-Id: I42b876b7f30f81b53c073df0600dece3c1dd5ff3
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit f3bf3155aae30d370be1903a15abaedcdd5ce62f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>